; ModuleID = '/home/carl/AnghaBench/linux/drivers/pci/controller/extr_pcie-iproc-msi.c_iproc_msi_irq_compose_msi_msg.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/pci/controller/extr_pcie-iproc-msi.c_iproc_msi_irq_compose_msi_msg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.irq_data = type { i32 }
%struct.msi_msg = type { i32, i32, i32 }
%struct.iproc_msi = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.irq_data*, %struct.msi_msg*)* @iproc_msi_irq_compose_msi_msg to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @iproc_msi_irq_compose_msi_msg(%struct.irq_data* %0, %struct.msi_msg* %1) #0 {
  %3 = alloca %struct.irq_data*, align 8
  %4 = alloca %struct.msi_msg*, align 8
  %5 = alloca %struct.iproc_msi*, align 8
  %6 = alloca i64, align 8
  store %struct.irq_data* %0, %struct.irq_data** %3, align 8
  store %struct.msi_msg* %1, %struct.msi_msg** %4, align 8
  %7 = load %struct.irq_data*, %struct.irq_data** %3, align 8
  %8 = call %struct.iproc_msi* @irq_data_get_irq_chip_data(%struct.irq_data* %7)
  store %struct.iproc_msi* %8, %struct.iproc_msi** %5, align 8
  %9 = load %struct.iproc_msi*, %struct.iproc_msi** %5, align 8
  %10 = getelementptr inbounds %struct.iproc_msi, %struct.iproc_msi* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  %12 = load %struct.iproc_msi*, %struct.iproc_msi** %5, align 8
  %13 = load %struct.irq_data*, %struct.irq_data** %3, align 8
  %14 = getelementptr inbounds %struct.irq_data, %struct.irq_data* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = call i64 @iproc_msi_addr_offset(%struct.iproc_msi* %12, i32 %15)
  %17 = add nsw i64 %11, %16
  store i64 %17, i64* %6, align 8
  %18 = load i64, i64* %6, align 8
  %19 = call i32 @lower_32_bits(i64 %18)
  %20 = load %struct.msi_msg*, %struct.msi_msg** %4, align 8
  %21 = getelementptr inbounds %struct.msi_msg, %struct.msi_msg* %20, i32 0, i32 2
  store i32 %19, i32* %21, align 4
  %22 = load i64, i64* %6, align 8
  %23 = call i32 @upper_32_bits(i64 %22)
  %24 = load %struct.msi_msg*, %struct.msi_msg** %4, align 8
  %25 = getelementptr inbounds %struct.msi_msg, %struct.msi_msg* %24, i32 0, i32 1
  store i32 %23, i32* %25, align 4
  %26 = load %struct.irq_data*, %struct.irq_data** %3, align 8
  %27 = getelementptr inbounds %struct.irq_data, %struct.irq_data* %26, i32 0, i32 0
  %28 = load i32, i32* %27, align 4
  %29 = shl i32 %28, 5
  %30 = load %struct.msi_msg*, %struct.msi_msg** %4, align 8
  %31 = getelementptr inbounds %struct.msi_msg, %struct.msi_msg* %30, i32 0, i32 0
  store i32 %29, i32* %31, align 4
  ret void
}

declare dso_local %struct.iproc_msi* @irq_data_get_irq_chip_data(%struct.irq_data*) #1

declare dso_local i64 @iproc_msi_addr_offset(%struct.iproc_msi*, i32) #1

declare dso_local i32 @lower_32_bits(i64) #1

declare dso_local i32 @upper_32_bits(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
